@@ -21,18 +21,20 @@ use Carp qw(croak);
 use Log::Any qw($log);
 use Protocol::Sys::Virt::URI; # imports 'parse_url'
 
+our @default_drivers = (
+    { transport => '', class => 'Local', host => 0 },
+    { transport => 'unix', class => 'Local', host => 0 },
+    # { transport => '', class => 'TCP', host => 1 },
+    # { transport => 'tls', class => 'TCP' },
+    # { transport => 'tcp', class => 'TCP' },
+    { transport => 'ext', class => 'Process' },
+    { transport => 'ssh', class => 'SSH' },
+    );
+
 sub new {
     my ($class, %args) = @_;
     return bless {
-        drivers => [
-            { transport => '', class => 'Local', host => 0 },
-            { transport => 'unix', class => 'Local', host => 0 },
-            # { transport => '', class => 'TCP', host => 1 },
-            # { transport => 'tls', class => 'TCP' },
-            # { transport => 'tcp', class => 'TCP' },
-            { transport => 'ext', class => 'Process' },
-            { transport => 'ssh', class => 'SSH' },
-            ],
+        drivers => $args{drivers} // \@default_drivers,
     }, $class;
 }
 
@@ -104,6 +106,16 @@ __VERSION__
 
 This module provides a central entrypoint to instantiate connections to
 LibVirt servers for configured means of transport.
+
+=head1 VARIABLES
+
+=head2 @default_drivers
+
+  push @Sys::Async::Virt::Connection::Factory::default_drivers,
+    { transport => 'tls', class => 'TCP' };
+
+List of drivers to be used when no drivers have been provided to the
+factory's C<new> constructor.
 
 =head1 CONSTRUCTOR
 
