@@ -4,6 +4,9 @@
     [Added]
        * Support for external process transport ('...+ext://')
        * More documentation on supported URL parameters
+       * New '@default_drivers' global variable in connection factory module
+    [Fixed]
+       * Connection factory's "new" method ignores "drivers" argument
 
 0.0.9    2024-10-06
     [Added]
